--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,12 @@
 			<artifactId>commons-dbcp</artifactId>
 			<version>1.2.2</version>
 		</dependency>
-
+	<!-- mybatis -->
+<dependency>
+	<groupId>org.mybatis</groupId>
+	<artifactId>mybatis</artifactId>
+	<version>3.2.8</version>
+</dependency>
 		<!-- junit 
 		<dependency>
 			<groupId>junit</groupId>
